vertical spacing fixes

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
 
 .pic{
 	display: block;
-	margin: 5% auto;
+	margin: 7% auto;
 
 	height: 15em;
 	border: 25px solid white;
